[package]
name = "golem-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { version = "14" }
ya-service-bus = "0.7.1"
actix-rt = "=2.9.0"
tokio = { version = "1.36.0", features = ["parking_lot", "sync"] }
anyhow = "1.0.81"
serde = {  version = "1", features = ["derive"] }
futures = "0.3"

[lints.clippy]
let_unit_value = "allow"